2006-01-07  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/driver.c (DriverThread): Add Push() macro to clarify list
	processing of sockets and drivers.

2006-01-06  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tests/ns_conn.test: fixed basic command test to recognize
	new "contentsentlength" command option.

2006-01-04  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* configure.in:  added test for inet_ntop.
	* nsthread/reentrant.c: use inet_ntop when available which fixes a
	bug on 64 bit ppc, at least under linux.
	* nsd/conn.c: added option to [ns_conn] to set/query contentsentlength
	for getting the correct length into the logfile, when files are
	delivered via event driven I/O. Thanks to Gustaf Neumann for providing
	above fixes.

2006-01-04  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/Makefile:
	* nsd/nsmain.c:
	* nsd/sock.c:
	* nsd/task.c: Backport AOLserver task queues.  Callbacks are
	registered to run in a seperate thread in response to socket
	read/write events.

2005-12-30  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/init.c:
	* nsd/urlspace.c:
	* tests/url2file.test: Split the urlspace by key ID and remove the
	global lock. Remove unused Ns_ServerSpecific*() routines.

	Make NsUrlSpecificWalk() emit an entry for both inherit and
	noinherit data, identifying each with a keyword.  Don't emit the
	server name, which is redundant, and separate the URL from the
	filter. (RFE: 1377113)

	* nsd/op.c:
	* nsd/url2file.c: Clarify naming of urlspecifc walk callbacks.

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/init.c:
	* nsd/proc.c:
	* nsd/cache.c: Global hash of cache names removed; access no
	longer available via Ns_CacheFind() or ns_cache_names.  Caches
	have unique locking requirements and lifetimes which could be
	violated by e.g. running ns_cache_stats on a thread local cache as the
	thread is exiting.

	New Ns_CacheCreateEx() allows creating a cache which has both a
	size and a time limit.
